# morpyengine

./: .gitignore  Engine.py  README.md  setup.cfg  setup.py  sketch-example.py
Systems/: __init__.py
examples/: sketch-example.py
src/morpyengine/: Constants.py  Engine.py  __init__.py
src/morpyengine/Systems/: Mouse.py  Render.py  __init__.py
