[metadata]
name = morpyengine-Morgiver
version = 0.0.1
author = Morgiver
author_email = me@morgiver.net
description = A small SDL2 Graphic Engine to learn how it work
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Morgiver/graphic-engine
project_urls =
    Bug Tracker = https://github.com/Morgiver/graphic-engine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src